Remove loading attribute from images in index.html

--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     <header>
       <h1>Reliable, efficient delivery</h1>
       <h2>Powered by Technology</h2>
-      <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      <p>Our Artificial Intelligence-powered tools use millions of project data points to ensure that your project is successful</p>
     </header>
     <section class="cards-container">
       <article class="card">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
-        <img src="./images/icon-supervisor.svg" alt="Supervisor" loading="lazy">
+        <img src="./images/icon-supervisor.svg" alt="Supervisor" >
       </article>
       <article class="card">
         <h2>Team Builder</h2>
         <p>Scans our talent network to create the optimal team for your project</p>
-     <img src="./images/icon-team-builder.svg" alt="Team Builder" loading="lazy">
+     <img src="./images/icon-team-builder.svg" alt="Team Builder" >
       </article>
       <article class="card">
         <h2>Karma</h2>
         <p>Regularly evaluates our talent to ensure quality</p>
-      <img src="./images/icon-karma.svg" alt="Karma" loading="lazy">
+      <img src="./images/icon-karma.svg" alt="Karma" >
       </article>
       <article class="card">
         <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
-      <img src="./images/icon-calculator.svg" alt="Supervisor" loading="lazy">
+      <img src="./images/icon-calculator.svg" alt="Calculator" >
      </article>
   </main>
   <footer>
