--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <article class="card">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
-        <img src="./images/icon-supervisor.svg" alt="Supervisor" >
+        < <img src="./images/icon-supervisor.svg" alt="Supervisor" loading="lazy">
       </article>
       <article class="card">
         <h2>Team Builder</h2>
